<resources>
    <string name="app_name">AppSample</string>

    <string name="NavHostFragmentTag">NavHostFragment</string>

    <!-- -->
    <string name="edit">Редактировать</string>

    <!-- User details -->
    <string name="phone_number">Телефон\n%1$s</string>
    <string name="phone_number_no_args">Телефон</string>
    <string name="city">Город: %1$s</string>
    <string name="city_no_args">Город:</string>
    <string name="company_name">Название компании: %1$s</string>
    <string name="company_name_no_args">Название компании:</string>
    <string name="zip_code">Zip код: %1$s</string>
    <string name="zip_code_no_args">Zip код:</string>
    <string name="coordinates">Координаты: %1$s</string>
    <string name="full_address">Подробный адрес&#8230;</string>
    <string name="hide_full_address">Свернуть подробный адрес</string>
    <string name="user_error_block_message">Произошла ошибка при получении данных пользователя</string>

    <!-- -->
    <string name="albums">Альбомы</string>
    <string name="add_image">Добавить фото</string>
    <string name="album">Альбом</string>
    <string name="photos_number">%d фотографий</string>
    <string name="albums_error_block_message">Произошла ошибка при получении альбомов</string>
    <string name="posts_loading_block_message">Загрузка&#8230;</string>
    <string name="add_post">Добавить пост</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Почта</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_sign_out">Выйти</string>
    <string name="error_invalid_email">Адрес почты невалидный</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Пароль введен неверно</string>
    <string name="error_field_required">Поле обязательно*</string>
    <string name="resend_verification_email">Отправить письмо подтверждения заново</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Регистрация</string>
    <string name="to_sign_up">Зарегестрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="email_registration">Регистрация аккаунта</string>
    <string name="email">Почта</string>
    <string name="enter_email">Введите почту</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="birth_date">Дата рождения</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="training_profile">Профиль подготовки</string>
    <string name="desired_university">Желаемый университет</string>
    <string name="password_reset">Восстановление пароля</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="some_error_during_registration">Возникла какая-то ошибка при регистрации</string>

    <!-- Profile Fragment details -->
    <string name="album_id_null">Ошибка, id Альбома почему-то NULL</string>
    <string name="post_id_null">Ошибка, id Поста почему-то NULL</string>



    <string name="dummy_post_body_text">Привет, экономисты. Мы подключили VK Donut — это регулярная финансовая поддержка нашего проекта.
\n\n
Мы, в свою очередь, будет благодарить вас эксклюзивными материалами, инсайдами, аналитикой, закрытыми акциями или ранним доступом к новым работам.
\n\n
Доны получают дополнительные преимущества:
\n\n
• Изображение звёздочки появится в комментариях рядом с вашей аватаркой.\n
• Руководители сообщества узнают, что вы теперь дон, и смогут порадовать вас чем-то особенным.\n
• Вы будете видеть своих друзей, которые поддерживают то же сообщество, что и вы — и сможете обсудить с ними закрытые материалы.
\n\n
Для тех, кто оформит подписку, будет доступен эксклюзивный набор стикеров пантера «Джонни». Новые стикеры будут приходить каждый месяц в течение года, пока вы поддерживаете нас. 😏</string>

    <string name="photo_transition_name">Photo Transition</string>

</resources>