<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.appsample.framework.presentation.auth.AuthViewModel" />

    </data>

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_in"
            android:translationZ="1dp"
            android:visibility="@{viewModel.isLoading()}"
            tools:ignore="UnusedAttribute" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_marginTop="16dp"
                    tools:srcCompat="@drawable/cicada" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_edittext_top_rounded"
                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:text="@={viewModel.userId}"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext_bottom_rounded"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:onClick="@{() -> viewModel.startLoading()}"
                    android:padding="12dp"
                    android:text="@string/sign_in"
                    app:cornerRadius="8dp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    android:visibility="gone" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/to_sign_up"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</layout>